# mldevops_exercise

./: .gitignore  .pre-commit-config.yaml  pyproject.toml  testingwandb.py  untitled0.ipynb  untitled0.py
wandb/: latest-run
wandb/run-20241118_155234-gjws2293/: run-gjws2293.wandb
wandb/run-20241118_155234-gjws2293/files/: config.yaml  wandb-metadata.json  wandb-summary.json
wandb/run-20241118_155312-oxmniocu/: run-oxmniocu.wandb
wandb/run-20241118_155312-oxmniocu/files/: config.yaml  wandb-metadata.json  wandb-summary.json
